--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-beta03'
+        compose_version = '1.2.0-rc01'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -12,6 +12,9 @@ plugins {
 
 allprojects {
     plugins.withId("com.vanniktech.maven.publish") {
+        mavenPublish {
+            androidVariantToPublish = "release"
+        }
         mavenPublishing {
             publishToMavenCentral("S01")
             signAllPublications()
