--- a/expandabletext/build.gradle
+++ b/expandabletext/build.gradle
@@ -29,7 +29,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
     kotlinOptions {
         jvmTarget = '1.8'
