--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-rc03'
+        compose_version = '1.2.0'
         compose_compiler_version = '1.2.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
