--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.2.1'
-        compose_compiler_version = '1.3.0'
+        compose_version = '1.3.0-beta02'
+        compose_compiler_version = '1.3.1'
+        compile_sdk = 33
+        target_sdk = 33
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
