--- a/expandabletext/build.gradle
+++ b/expandabletext/build.gradle
@@ -7,11 +7,11 @@ plugins {
 android {
     namespace 'io.dokar.expandabletext'
 
-    compileSdk 32
+    compileSdk compile_sdk
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk target_sdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
