--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-beta03'
-        compose_compiler_version = '1.3.1'
+        compose_version = '1.3.0-rc01'
+        compose_compiler_version = '1.3.2'
         compile_sdk = 33
         target_sdk = 33
     }
@@ -9,7 +9,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.vanniktech.maven.publish' version '0.22.0' apply false
 }
 
