--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-rc01'
+        compose_version = '1.3.0'
         compose_compiler_version = '1.3.2'
         compile_sdk = 33
         target_sdk = 33
