--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.3.1'
+        compose_bom_version = '2023.01.00'
         compose_compiler_version = '1.3.2'
         compile_sdk = 33
         target_sdk = 33
