--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
     ext {
+        kotlin_versoin = '2.0.0'
         compose_bom_version = '2024.06.00'
-        compose_compiler_version = '1.5.12'
         compile_sdk = 34
         target_sdk = 34
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_versoin" apply false
+    id 'org.jetbrains.kotlin.plugin.compose' version "$kotlin_versoin" apply false
     id 'com.android.application' version '8.5.0' apply false
     id 'com.android.library' version '8.5.0' apply false
     id 'com.vanniktech.maven.publish' version '0.28.0' apply false
