--- a/expandabletext/build.gradle
+++ b/expandabletext/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'com.vanniktech.maven.publish'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
@@ -29,9 +30,6 @@ android {
     }
     buildFeatures {
         compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_compiler_version
     }
     kotlinOptions {
         jvmTarget = '1.8'
