--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,18 @@
 buildscript {
     ext {
-        kotlin_versoin = '2.0.0'
-        compose_bom_version = '2024.06.00'
-        compile_sdk = 34
-        target_sdk = 34
+        kotlin_versoin = '2.3.0'
+        compose_bom_version = '2026.01.00'
+        compile_sdk = 36
+        target_sdk = 36
+        min_sdk = 23
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'org.jetbrains.kotlin.android' version "$kotlin_versoin" apply false
     id 'org.jetbrains.kotlin.plugin.compose' version "$kotlin_versoin" apply false
-    id 'com.android.application' version '8.5.0' apply false
-    id 'com.android.library' version '8.5.0' apply false
-    id 'com.vanniktech.maven.publish' version '0.29.0' apply false
-}
-
-allprojects {
-    plugins.withId("com.vanniktech.maven.publish") {
-        mavenPublishing {
-            publishToMavenCentral("S01")
-            signAllPublications()
-        }
-    }
+    id 'com.android.application' version "9.0.0" apply false
+    id 'com.android.library' version "9.0.0" apply false
+    id 'com.vanniktech.maven.publish' version '0.36.0' apply false
 }
 
 task clean(type: Delete) {
